--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^4.6.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-scripts": "3.2.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
